# codex-supervisor

./: .gitattributes  .gitignore  CONTEXT.md  Makefile  README.md  com.sam.codex-supervisor.plist  config.example.yaml  daemon.py  pyproject.toml  setup.py
docs/: LOOP.md  durable-workflow-job-extraction-plan.md  grill-findings-aggressive-steering-escalation-policy.md  grill-findings-claude-supervisor-telegram.md  grill-findings-codex-desktop-status-sync.md  grill-findings-conversation-continuity.md  grill-findings-cs20-desktop-ipc-spike.md  grill-findings-desktop-gui-repaint-truth.md  grill-findings-desktop-gui-steering-transport.md  grill-findings-desktop-progress-status-sync.md  grill-findings-grounded-review-suggestions.md  grill-findings-progress-context-backfill.md  grill-findings-progress-context-continuity.md  grill-findings-quiet-mode-escalation-only.md  grill-findings-tdd-aggressive-steering-escalation-policy.md  grill-findings-tdd-claude-supervisor-telegram.md  grill-findings-tdd-codex-desktop-status-sync.md  grill-findings-tdd-conversation-continuity.md  grill-findings-tdd-cs20-desktop-ipc-spike.md  grill-findings-tdd-desktop-gui-repaint-truth.md  grill-findings-tdd-desktop-progress-status-sync.md  grill-findings-tdd-grounded-review-suggestions.md  grill-findings-tdd-progress-context-backfill.md  grill-findings-tdd-progress-context-continuity.md  grill-findings-tdd-quiet-mode-escalation-only.md  grill-findings-tdd-telegram-mode-toggle-approval.md  grill-findings-tdd.md  grill-findings-telegram-mode-toggle-approval.md  grill-findings.md  supervisor-axi-detached-dispatcher.md
mcp_tools/: __init__.py  codex_supervisor_axi.py  codex_supervisor_stdio.py  codex_supervisor_workflow_cli.py  codex_tools.py  supervisor_tools.py  telegram_tools.py
migrations/: env.py
scripts/: backfill-progress-context.sh  codex-supervisor-hook.sh  mine_agentic_eval_cases.py  pro_oracle_gold_proof_runner.py  probe_cursor_sdk_live.py  probe_live_failure_mode.py  probe_live_failure_mode_cohort.py  run-daemon.sh  run_agentic_eval_live.py  run_supervisor_autoresearch.py  run_supervisor_trend_metrics.py  run_swe_bench_mergeability_replay.py  run_swe_bench_pro_pilot.py  run_terminal_bench_pilot.py  setup-telegram-chat.sh  swebench_pro_batch_driver.py  swebench_pro_claude_code_runner.py  (+1 more)
tests/: conftest.py  (+107 more)
(+2713 files in other folders)
