[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-supervisor"
version = "0.2.0"
description = "Always-on supervisor for a Codex desktop orchestrator. Drift detection, real-time critique, post-run eval, Telegram feedback."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",            # used for embeddings only (text-embedding-3-small)
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "watchfiles>=0.24.0",
    "psutil>=6.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
agent = ["claude-agent-sdk>=0.1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.setuptools.packages.find]
where = ["."]
include = ["supervisor*", "mcp_tools*"]
