[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-supervisor"
version = "0.2.0"
description = "Always-on supervisor for a Codex desktop orchestrator. Drift detection, real-time critique, post-run eval, Telegram feedback."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",            # used for embeddings only (text-embedding-3-small)
    "fastapi>=0.115.0",
    "mcp>=1.27.1",
    "uvicorn>=0.32.0",
    "watchfiles>=0.24.0",
    "psutil>=6.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
agent = ["claude-agent-sdk>=0.1.0"]
cursor = ["cursor-sdk"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
postgres = ["alembic>=1.13", "psycopg[binary]>=3.2", "sqlalchemy>=2.0"]
swebench = ["datasets>=2.20.0", "docker>=7.1.0", "swebench>=4.1.0"]

[project.scripts]
codex-supervisor-mcp = "mcp_tools.codex_supervisor_stdio:main"
codex-supervisor-workflow = "mcp_tools.codex_supervisor_workflow_cli:main"
codex-supervisor-workflow-dispatcher = "supervisor.workflow_job_dispatcher:main"
codex-supervisor-axi = "mcp_tools.codex_supervisor_axi:main"
codex-supervisor-swebench-mergeability-replay = "supervisor.swe_bench_mergeability_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["supervisor*", "mcp_tools*"]
